# MachineLearningCPP

./: CMakeLists.txt  README.md  SVM.cpp  SVM.h  autograd.cpp  autograd.h  data.h  kernelfunctions.h  main.cpp  model.h  perceptron.cpp  perceptron.h  tools.cpp  tools.h  utils.cpp  utils.h
data/: testdata
